increase tmux history limit

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -55,3 +55,5 @@ set -g window-status-bell-style 'fg=colour2 bg=colour1 bold'
 set -g message-style 'fg=#fc054b bg=colour0 bold'
 
 set-option -g renumber-windows on
+
+set-option -g history-limit 100000
