zed: add soft wrap for markdown files

--- a/zed/.config/zed/settings.json
+++ b/zed/.config/zed/settings.json
@@ -24,5 +24,10 @@
   "inlay_hints": {
     "enabled": true
   },
-  "format_on_save": "on"
+  "format_on_save": "on",
+  "languages": {
+    "Markdown": {
+      "soft_wrap": "editor_width"
+    }
+  }
 }
