zed: use clippy for linting

--- a/zed/.config/zed/settings.json
+++ b/zed/.config/zed/settings.json
@@ -42,6 +42,14 @@
     }
   },
   "lsp": {
+    "rust-analyzer": {
+      "initialization_options": {
+        "checkOnSave": {
+          "enable": true,
+          "command": "clippy"
+        }
+      }
+    },
     "ruff": {
       "initialization_options": {
         "settings": {
